--- a/rendering/base.html
+++ b/rendering/base.html
@@ -7,7 +7,31 @@
 <body>
     <h1>Create New {{ target_class }}</h1>
     <form>
-        {%- for property in properties %}
+        {%- for group in groups %}
+        <fieldset>
+            <legend>{{ group["name"] }}:</legend>
+            {%- for property in group["properties"] %}
+            <br>
+            {{ property["name"] }}:<br>
+            {%- if "description" in property %}
+            <i>{{ property["description"] }}</i><br>
+            {%- endif %}
+            {%- if "in" in property %}
+            {%- for option in property["in"] %}
+            <input type="radio" name="{{ property["path"] }}"
+            {%- if "defaultValue" in property and property["defaultValue"] == option %} checked {% endif %}>
+            {{ option }}<br>
+            {%- endfor %}
+            {%- else %}
+            <input type="text" name="{{ property["path"] }}"
+            {%- if "defaultValue" in property %} value="{{ property["defaultValue"] }}" {% endif %}><br>
+            {%- endif %}
+            {%- endfor %}
+        </fieldset>
+        <br>
+        {%- endfor %}
+
+        {%- for property in ungrouped_properties %}
         {{ property["name"] }}:<br>
         {%- if "description" in property %}
         <i>{{ property["description"] }}</i><br>
