--- a/rendering/property.html
+++ b/rendering/property.html
@@ -1,17 +1,18 @@
-{{ property["name"] }}:<br>
+<label for="{{ property["path"] }}">{{ property["name"] }}:</label><br />
 {%- if "description" in property %}
-    <i>{{ property["description"] }}</i><br>
+<label for="{{ property["path"] }}"><i>{{ property["description"] }}</i></label><br />
 {%- endif %}
 {%- if "in" in property %}
-    <select name="{{ property["path"] }}">
-    {%- for option in property["in"] %}
-        <option value="{{ option }}"
-        {%- if "defaultValue" in property and property["defaultValue"] == option %} selected{% endif %}>
-        {{- option }}</option>
-    {%- endfor %}
-    </select><br>
+<select name="{{ property["path"] }}" id="{{ property["path"] }}">
+{%- for option in property["in"] %}
+    <option value="{{ option }}"
+    {%- if "defaultValue" in property and property["defaultValue"] == option %} selected{% endif %}>
+    {{- option }}</option>
+{%- endfor %}
+</select><br />
 {%- else %}
-    <input type={%- if property["path"] == URI_EMAIL %}"email"{% else %}"text"{% endif %} name="{{ property["path"] }}"
-    {%- if "defaultValue" in property %} value="{{ property["defaultValue"] }}"{% endif %}
-    {%- if "minCount" in property and property["minCount"]|int > 0 %} required{% endif %} /><br>
+<input id="{{ property["path"] }}" name="{{ property["path"] }}"
+{%- if property["path"] == URI_EMAIL %} type="email"{% else %} type="text"{% endif %}
+{%- if "defaultValue" in property %} value="{{ property["defaultValue"] }}"{% endif %}
+{%- if "minCount" in property and property["minCount"]|int > 0 %} required{% endif %} /><br />
 {%- endif %}
