Added support for minInclusive, minExclusive, maxInclusive and maxExclusive constraints

--- a/rendering/property.html
+++ b/rendering/property.html
@@ -16,5 +16,7 @@
 {%- elif "datatype" in property and property["datatype"] in NUMBER_DATATYPES %} type="number"
 {%- else %} type="text"{% endif %}
 {%- if "defaultValue" in property %} value="{{ property["defaultValue"] }}"{% endif %}
-{%- if "minCount" in property and property["minCount"]|int > 0 %} required{% endif %} /><br />
+{%- if "minCount" in property and property["minCount"]|int > 0 %} required{% endif %}
+{%- if "min" in property %} min="{{ property["min"] }}"{% endif %}
+{%- if "max" in property %} max="{{ property["max"] }}"{% endif %}/><br />
 {%- endif %}
