--- a/rendering/property.html
+++ b/rendering/property.html
@@ -13,6 +13,7 @@
 {%- else %}
 <input id="{{ property["path"] }}" name="{{ property["path"] }}"
 {%- if property["path"] == URIs["EMAIL"] %} type="email"
+{% elif property["path"] == URIs["PHONE_NUMBER"] %} type="tel"
 {%- elif "datatype" in property %}
 {%- if property["datatype"] in URIs["NUMBER"] %} type="number"
 {% elif property["datatype"] == URIs["DATE"] %} type="date"
@@ -21,5 +22,5 @@
 {%- if "defaultValue" in property %} value="{{ property["defaultValue"] }}"{% endif %}
 {%- if "minCount" in property and property["minCount"]|int > 0 %} required{% endif %}
 {%- if "min" in property %} min="{{ property["min"] }}"{% endif %}
-{%- if "max" in property %} max="{{ property["max"] }}"{% endif %}/><br />
+{%- if "max" in property %} max="{{ property["max"] }}"{% endif %} /><br />
 {%- endif %}
