--- a/rendering/property.html
+++ b/rendering/property.html
@@ -17,6 +17,7 @@
 {%- elif "datatype" in property %}
 {%- if property["datatype"] in URIs["NUMBER"] %} type="number"
 {% elif property["datatype"] == URIs["DATE"] %} type="date"
+{% elif property["datatype"] == URIs["TIME"] %} type="time"
 {%- else %} type="text"{% endif %}
 {%- endif %}
 {%- if "defaultValue" in property %} value="{{ property["defaultValue"] }}"{% endif %}
