Added support for sh:maxLength

--- a/rendering/property.html
+++ b/rendering/property.html
@@ -24,5 +24,6 @@
 {%- if "defaultValue" in property %} value="{{ property["defaultValue"] }}"{% endif %}
 {%- if "minCount" in property and property["minCount"]|int > 0 %} required{% endif %}
 {%- if "min" in property %} min="{{ property["min"] }}"{% endif %}
-{%- if "max" in property %} max="{{ property["max"] }}"{% endif %} /><br />
+{%- if "max" in property %} max="{{ property["max"] }}"{% endif %}
+{% if "maxLength" in property %} maxlength="{{ property["maxLength"] }}"{% endif %} /><br />
 {%- endif %}
