Added support for flags (for use with patterns) Added unit tests for sh:pattern and sh:flags

--- a/rendering/base.html
+++ b/rendering/base.html
@@ -32,9 +32,9 @@
 <script>
     $("#form").validate({});
     {%- for property in shape["properties"] %}{% if "pattern" in property %}
-    $("#" + $.escapeSelector("{{ property["path"] }}")).rules("add", { pattern: /{{ property["pattern"] }}/ })
+    $("#" + $.escapeSelector("{{ property["path"] }}")).rules("add", { pattern: /{{ property["pattern"] }}/{{ property["flags"] }} })
     {%- endif %}{%- endfor %}
     {%- for group in shape["groups"] %} {% for property in group["properties"] %}{% if "pattern" in property %}
-    $("#" + $.escapeSelector("{{ property["path"] }}")).rules("add", { pattern: /{{ property["pattern"] }}/ })
+    $("#" + $.escapeSelector("{{ property["path"] }}")).rules("add", { pattern: /{{ property["pattern"] }}/{{ property["flags"] }} })
     {%- endif %}{%- endfor %}{%- endfor %}
 </script>
