--- a/rendering/property.html
+++ b/rendering/property.html
@@ -13,17 +13,16 @@
 {%- else %}
 <input id="{{ property["path"] }}" name="{{ property["path"] }}"
 {%- if property["path"] == URIs["EMAIL"] %} type="email"
-{% elif property["path"] == URIs["PHONE_NUMBER"] %} type="tel"
+{%- elif property["path"] == URIs["PHONE_NUMBER"] %} type="tel"
 {%- elif "datatype" in property %}
 {%- if property["datatype"] in URIs["NUMBER"] %} type="number"
 {% elif property["datatype"] == URIs["DATE"] %} type="date"
 {% elif property["datatype"] == URIs["TIME"] %} type="time"
 {% elif property["datatype"] == URIs["BOOLEAN"] %} type="checkbox"
 {%- else %} type="text"
-{%- if "pattern" in property %} pattern="/{{ property["pattern"] }}/
-{%- if "flags" in property %}{{ property["flags"] }}
-{%- endif %}" title="Must match pattern: {{ property["pattern"] }}"{% endif %}{% endif %}
 {%- endif %}
+{%- endif %}
+{%- if "pattern" in property %} title="Must match pattern: /{{ property["pattern"] }}/{{ property["flags"] }}"{% endif %}
 {%- if "defaultValue" in property %} value="{{ property["defaultValue"] }}"{% endif %}
 {%- if "minCount" in property and property["minCount"]|int > 0 %} required{% endif %}
 {%- if "min" in property %} min="{{ property["min"] }}"{% endif %}
