Added support for sh:hasValue. The field is displayed in the form but cannot be altered. Reworked some of the unit tests. Updated the README

--- a/tests/expected_results/empty_shape.html
+++ b/tests/expected_results/empty_shape.html
@@ -17,5 +17,5 @@
 <script src="jquery-validation/dist/jquery.validate.js"></script>
 <script src="jquery-validation/src/additional/pattern.js"></script>
 <script>
-    $("#form").validate({});
+    $("#form").validate({ ignore: ":input[disabled]" });
 </script>
