--- a/rendering/base.html
+++ b/rendering/base.html
@@ -30,7 +30,7 @@
 <script src="jquery-validation/dist/jquery.validate.js"></script>
 <script src="jquery-validation/src/additional/pattern.js"></script>
 <script>
-    $("#form").validate({});
+    $("#form").validate({ ignore: ":input[disabled]" });
     {%- for property in shape["properties"] %}{% if "pattern" in property %}
     $("#" + $.escapeSelector("{{ property["path"] }}")).rules("add", { pattern: /{{ property["pattern"] }}/{{ property["flags"] }} })
     {%- endif %}{%- endfor %}
