--- a/rendering/property.html
+++ b/rendering/property.html
@@ -23,9 +23,11 @@
 {%- endif %}
 {%- endif %}
 {%- if "pattern" in property %} title="Must match pattern: /{{ property["pattern"] }}/{{ property["flags"] }}"{% endif %}
-{%- if "defaultValue" in property %} value="{{ property["defaultValue"] }}"{% endif %}
+{%- if "hasValue" in property %} readonly disabled value="{{ property["hasValue"] }}" title="This value cannot be changed."
+{%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
+{% endif %}
 {%- if "minCount" in property and property["minCount"]|int > 0 %} required{% endif %}
 {%- if "min" in property %} min="{{ property["min"] }}"{% endif %}
 {%- if "max" in property %} max="{{ property["max"] }}"{% endif %}
-{%- if "maxLength" in property %} maxlength="{{ property["maxLength"] }}"{% endif %} />
+{%- if "maxLength" in property %} maxlength="{{ property["maxLength"] }}"{% endif %}/>
 {%- endif %}<br />
